--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,19 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vspace.qa.TestCases.LoginTest</td>
+<td>com.vspace.qa.TestCases.testing</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC003_chckInvldPasswd_LoginTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC006_chckblankemailPassws_LoginTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>TC001_chckvldcredential_LoginTest</td>
@@ -24,14 +16,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC002_chckInvldEmail_LoginTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC005_chckblankpassword_LoginTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC004_chckblankemail_LoginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
